--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "mapbox-gl": "^3.11.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
